plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.google.protobuf' version '0.9.6'
}

group = 'tgb.cryptoexchange'
version = '0.20.1'
description = 'merchant-details'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'tgb.cryptoexchange:common-api:1.1.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'commons-codec:commons-codec:1.19.0'
	implementation 'org.springframework.kafka:spring-kafka:3.3.10'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.semver4j:semver4j:6.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus:1.16.2'
	implementation platform("org.springframework.grpc:spring-grpc-dependencies:0.12.0")
	implementation "org.springframework.grpc:spring-grpc-spring-boot-starter"
	implementation "io.grpc:grpc-protobuf"
	implementation "io.grpc:grpc-stub"
	compileOnly 'org.projectlombok:lombok'
	compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.hashids:hashids:1.0.3'
	implementation 'tgb.cryptoexchange:commons:1.0'
	implementation 'com.macasaet.fernet:fernet-java8:1.5.0'
	testImplementation 'io.grpc:grpc-testing'
	testImplementation 'org.springframework.grpc:spring-grpc-test'
}

protobuf {
	protoc {
		artifact = "com.google.protobuf:protoc:4.29.3"
	}
	plugins {
		grpc {
			artifact = "io.grpc:protoc-gen-grpc-java:1.71.0"
		}
	}
	generateProtoTasks {
		all()*.plugins {
			grpc {}
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.jar {
	archiveFileName = "merchant-details.jar"
}

bootJar {
	archiveFileName = 'merchant-details.jar'
}

//Отключена компиляция тестов на время разработки details-api
compileTestJava.enabled = false
